FEAT: create Button Component - props:{children, type, width, height, fontSize, radius, onClick function}

--- a/ZIPPLZ_FE/src/index.css
+++ b/ZIPPLZ_FE/src/index.css
@@ -17,6 +17,7 @@ html {
   .profile-img {
     @apply rounded-zp-radius-full max-w-16 max-h-16 w-full aspect-square drop-shadow-zp-deep;
   .btn {
+  /* .btn {
     @apply;
-  }
+  } */
 }
