--- a/ZIPPLZ_FE/src/index.css
+++ b/ZIPPLZ_FE/src/index.css
@@ -14,6 +14,6 @@ html {
     @apply w-[170px] h-[134px] rounded-zp-radius-big bg-zp-transparent py-3.5 items-center flex flex-col bg-zp-light-gray drop-shadow-zp-normal;
   }
   .profile-img {
-    @apply rounded-zp-radius-full max-w-16 max-h-16 w-full aspect-square drop-shadow-zp-deep;
+    @apply rounded-zp-radius-full min-w-8 max-w-16 max-h-16 w-full aspect-square drop-shadow-zp-deep;
   }
 }
