--- a/ZIPPLZ_FE/src/components/common/calendar/Calendar.css
+++ b/ZIPPLZ_FE/src/components/common/calendar/Calendar.css
@@ -5,17 +5,11 @@
 .fc-day-sat a {
   color: blue;
 }
-.fc-toolbar-title {
-  margin: 0;
-  color: #73744a;
-}
 
-.fc-toolbar .fc-button {
-  font-size: 0.5rem;
+.fc .fc-button-primary {
+  background-color: transparent;
+  border: none;
   padding: 0;
-  border: 0;
-  color: #73744a;
-  background-color: white;
 }
 .fc-toolbar {
   height: 1rem;
@@ -41,4 +35,29 @@
 .fc-h-event {
   border: none;
   background-color: white;
+}
+.fc-theme-standard th {
+  height: 32px;
+  padding-top: 3.5px;
+  background: #e5edff;
+  border: 1px solid #dddee0;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 19px;
+  color: #7b7b7b;
+}
+.fc {
+  width: 100%;
+}
+
+.fc .fc-toolbar.fc-header-toolbar {
+  margin: 0;
+  padding: 0 40px;
+  background-color: #356eff;
+  height: 48px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  color: white;
+  border-radius: 16px 16px 0px 0px;
 }
