REFACTOR: pull 과정에서 충돌 해결

--- a/ZIPPLZ_FE/src/index.css
+++ b/ZIPPLZ_FE/src/index.css
@@ -4,7 +4,6 @@
 
 html {
   @apply text-zp-black font-nanum text-balance break-all min-h-full max-w-[600px] m-auto;
-  @apply text-zp-black font-nanum text-balance break-all;
 }
 
 @layer components {
@@ -15,9 +14,6 @@ html {
     @apply w-[170px] h-[134px] rounded-zp-radius-big bg-zp-transparent py-3.5 items-center flex flex-col bg-zp-light-gray drop-shadow-zp-normal;
   }
   .profile-img {
-    @apply rounded-zp-radius-full max-w-16 max-h-16 w-full aspect-square drop-shadow-zp-deep;
-  .btn {
-  /* .btn {
-    @apply;
-  } */
+    @apply rounded-zp-radius-full min-w-8 max-w-16 max-h-16 w-full aspect-square drop-shadow-zp-deep;
+  }
 }
