--- a/ZIPPLZ_FE/src/components/common/calendar/Calendar.css
+++ b/ZIPPLZ_FE/src/components/common/calendar/Calendar.css
@@ -5,11 +5,20 @@
 .fc-day-sat a {
   color: blue;
 }
+table {
+  background-color: transparent;
+  border: 1px solid black;
+}
+
+th {
+  background-color: white;
+}
 
 .fc .fc-button-primary {
   background-color: transparent;
   border: none;
   padding: 0;
+  color: black;
 }
 .fc-toolbar {
   height: 1rem;
@@ -52,12 +61,11 @@
 
 .fc .fc-toolbar.fc-header-toolbar {
   margin: 0;
-  padding: 0 40px;
-  background-color: #356eff;
-  height: 48px;
+  padding: 0 1rem;
+  background-color: transparent;
+  height: 3rem;
   font-weight: 400;
-  font-size: 10px;
-  line-height: 10px;
-  color: white;
-  border-radius: 16px 16px 0px 0px;
+  font-size: 0.5rem;
+  line-height: 0.5rem;
+  color: black;
 }
